trying to fix issue with image not loading on mobile

--- a/style/style.css
+++ b/style/style.css
@@ -21,6 +21,7 @@ h1{
     padding: 0.8vw;
     font-size: 2vw;
     background-image: url(https://elijohnson565.github.io/RustysRVs/images/leaves.jpg);
+    background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: cover;
 }
